# ai-model-pipelines-example

./: .auto-claude-status  .bazelrc  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .trivyignore  BUILD.bazel  LICENSE  MODEL_LOADING_VERIFICATION.md  MODULE.bazel  Makefile  README.md  SECURITY.md  TEST_IMPORTS.md  model-loading-verification.txt  pyproject.toml  pytest-output.txt  requirements.txt  requirements_lock.txt  requirements_lock_cpu.txt  test_imports.py  trivy.yaml
.github/workflows/: build-containers.yml  ci-training.yml  ci.yml  data-pipeline.yml  scheduled-vulnerability-scan.yml
configs/: BUILD.bazel  smoke-test.yaml  train-small.yaml
docker/base/: Dockerfile
docker/inference/: Dockerfile
docker/training/: BUILD.bazel  Dockerfile
docs/: ARCHITECTURE.md  BAZEL_ML_SETUP.md  BLACK_FORMATTING.md  DEPENDENCY_POLICY.md  OPTIMIZATION_GUIDE.md  SECURITY_SCANNING.md
k8s/: BUILD.bazel  distributed-training.yaml  jupyter-gpu.yaml  training-job.yaml
scripts/: BUILD.bazel  benchmark_dataloader.py  benchmark_training.py  data_stats.py  download_data.py  generate_test_data.py  profile_gpu.py  split_data.py  tokenize_data.py  verify_reproducibility.py
src/: BUILD.bazel  evaluate.py  train.py
src/data/: BUILD.bazel  __init__.py  dataset.py
src/models/: BUILD.bazel  __init__.py  gpt.py
tests/scripts/: TEST_IMPORTS.md  run_black_formatting.sh  test_model_loading.py
